# rommer

./: CLAUDE.md  METADATA_ENHANCEMENT_PLAN.md  README.md  UPDATE_FEATURE_DESIGN.md  analyze.py  datastructures.py  datparse.py  dats.py  dev-environment.yml  fileinfo.py  persist.py  pyproject.toml  rommer.py  romtools.py  setup.py  test_metadata.py  update-datfiles.sh
rommer/: __init__.py  __main__.py  dl.py
rommer/commands/: diff.py  report.py
rommer/plugins/: import.py  report.py  scan.py
src/rommer/: __init__.py  __main__.py  dl.py  extractor.py  metadata.py
src/rommer/commands/: diff.py  import.py  report.py  update.py
tests/: test_metadata.py
