[build-system]
requires = ["setuptools>=77.7"]
build-backend = "setuptools.build_meta"

[project]
name = "rommer"
version = "0.1.0"
description = "Rommer: Organize your ROMs."
authors = [{name = "Curtis Rueden"}]
readme = "README.md"
keywords = ["emulation", "roms", "organize", "validate"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Topic :: System :: Emulators",
    "Topic :: Utilities",
]

requires-python = ">=3.6"
dependencies = [
  "sqlalchemy",
  "tqdm",
]

[dependency-groups]
dev = [
    "build",
    "pytest",
    "ruff",
    "toml",
    "validate-pyproject[all]",
]

[project.scripts]
rommer = "rommer.__main__:main"

[project.urls]
homepage = "https://github.com/ctrueden/rommer"
documentation = "https://github.com/ctrueden/rommer/blob/main/README.md"
source = "https://github.com/ctrueden/rommer"
download = "https://pypi.org/project/rommer"
tracker = "https://github.com/ctrueden/rommer/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-s -p no:faulthandler"
